apollo-router/tests/snapshots/apollo_otel_traces__connector_error-2.snap
---
source: apollo-router/tests/apollo_otel_traces.rs
expression: report
---
resourceSpans:
  - resource:
      attributes:
        - key: apollo.client.host
          value:
            stringValue: "[redacted]"
        - key: apollo.client.uname
          value:
            stringValue: "[redacted]"
        - key: apollo.graph.ref
          value:
            stringValue: test
        - key: apollo.router.id
          value:
            stringValue: "[redacted]"
        - key: apollo.schema.id
          value:
            stringValue: "[redacted]"
        - key: apollo.user.agent
          value:
            stringValue: "[redacted]"
      droppedAttributesCount: 0
      entityRefs: []
    scopeSpans:
      - scope:
          name: apollo-router
          version: "[version]"
          attributes: []
          droppedAttributesCount: 0
        spans:
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 257
            name: query
            kind: 2
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes:
              - key: apollo_private.request
                value:
                  boolValue: true
              - key: graphql.operation.type
                value:
                  stringValue: query
              - key: http.request.method
                value:
                  stringValue: POST
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 257
            name: router
            kind: 1
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes:
              - key: apollo_private.duration_ns
                value:
                  stringValue: "[redacted]"
              - key: apollo_private.http.request_headers
                value:
                  stringValue: "{}"
              - key: apollo_private.http.response_headers
                value:
                  stringValue: "[redacted]"
              - key: client.name
                value:
                  stringValue: ""
              - key: client.version
                value:
                  stringValue: ""
              - key: http.request.method
                value:
                  stringValue: POST
              - key: http.response.status_code
                value:
                  intValue: "200"
              - key: trace_id
                value:
                  stringValue: "[redacted]"
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 1
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 257
            name: rhai_plugin
            kind: 1
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes: []
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 257
            name: parse_query
            kind: 1
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes: []
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 257
            name: compute_job
            kind: 1
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes: []
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 257
            name: compute_job.execution
            kind: 1
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes: []
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 257
            name: supergraph
            kind: 1
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes:
              - key: apollo_private.graphql.variables
                value:
                  stringValue: "[redacted]"
              - key: apollo_private.operation_signature
                value:
                  stringValue: "# -\n{posts{body forceError id title}}"
              - key: apollo_private.query.aliases
                value:
                  intValue: "0"
              - key: apollo_private.query.depth
                value:
                  intValue: "2"
              - key: apollo_private.query.height
                value:
                  intValue: "5"
              - key: apollo_private.query.root_fields
                value:
                  intValue: "1"
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 257
            name: rhai_plugin
            kind: 1
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes: []
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 257
            name: query_planning
            kind: 1
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes: []
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 257
            name: compute_job
            kind: 1
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes: []
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 257
            name: compute_job.execution
            kind: 1
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes: []
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 257
            name: execution
            kind: 1
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes:
              - key: graphql.operation.type
                value:
                  stringValue: query
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 257
            name: rhai_plugin
            kind: 1
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes: []
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 257
            name: sequence
            kind: 1
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes: []
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 257
            name: fetch
            kind: 1
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes:
              - key: apollo.subgraph.name
                value:
                  stringValue: posts
              - key: apollo_private.sent_time_offset
                value:
                  stringValue: "[redacted]"
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 257
            name: connect
            kind: 1
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes:
              - key: apollo.connector.detail
                value:
                  stringValue: "{\"GET\":\"/posts\"}"
              - key: apollo.connector.selection
                value:
                  stringValue: "id\ntitle\nbody"
              - key: apollo.connector.source.detail
                value:
                  stringValue: "[redacted]"
              - key: apollo.connector.source.name
                value:
                  stringValue: jsonPlaceholder
              - key: apollo.connector.type
                value:
                  stringValue: http
              - key: apollo_private.sent_time_offset
                value:
                  stringValue: "[redacted]"
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 1
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 257
            name: connect_request
            kind: 1
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes: []
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 1
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 257
            name: http_request
            kind: 3
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes:
              - key: http.response.status_code
                value:
                  intValue: "200"
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 257
            name: flatten
            kind: 1
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes:
              - key: graphql.path
                value:
                  stringValue: /posts/@
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 257
            name: fetch
            kind: 1
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes:
              - key: apollo.subgraph.name
                value:
                  stringValue: posts
              - key: apollo_private.sent_time_offset
                value:
                  stringValue: "[redacted]"
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 257
            name: connect
            kind: 1
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes:
              - key: apollo.connector.detail
                value:
                  stringValue: "{\"GET\":\"/missing?_={$args.id}\"}"
              - key: apollo.connector.selection
                value:
                  stringValue: forceError
              - key: apollo.connector.source.detail
                value:
                  stringValue: "[redacted]"
              - key: apollo.connector.source.name
                value:
                  stringValue: jsonPlaceholder
              - key: apollo.connector.type
                value:
                  stringValue: http
              - key: apollo_private.sent_time_offset
                value:
                  stringValue: "[redacted]"
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 2
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 257
            name: connect_request
            kind: 1
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes: []
            droppedAttributesCount: 0
            events:
              - timeUnixNano: "[time]"
                name: ""
                attributes:
                  - key: exception.message
                    value:
                      stringValue: Request failed
                  - key: graphql.error.extensions.code
                    value:
                      stringValue: CONNECTOR_FETCH
                  - key: graphql.error.path
                    value:
                      stringValue: "[redacted]"
                droppedAttributesCount: 0
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 2
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 257
            name: http_request
            kind: 3
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes:
              - key: http.response.status_code
                value:
                  intValue: "404"
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 257
            name: connect_request
            kind: 1
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes: []
            droppedAttributesCount: 0
            events:
              - timeUnixNano: "[time]"
                name: ""
                attributes:
                  - key: exception.message
                    value:
                      stringValue: Request failed
                  - key: graphql.error.extensions.code
                    value:
                      stringValue: CONNECTOR_FETCH
                  - key: graphql.error.path
                    value:
                      stringValue: "[redacted]"
                droppedAttributesCount: 0
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 2
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 257
            name: http_request
            kind: 3
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes:
              - key: http.response.status_code
                value:
                  intValue: "404"
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
        schemaUrl: ""
    schemaUrl: ""
